--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase": "^4.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.2",
     "react-native-router-flux": "^3.35.0",
