--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "firebase": "^4.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
